added completion of submission and next submission is auto created
